--- a/src/turnos-app/list-page.html
+++ b/src/turnos-app/list-page.html
@@ -130,6 +130,7 @@
                     this._getData(this.data);
                 } else {
                     this.$.neon_pages.selected = 1;
+                    this.set('route.path', '/')
                 }
 
             },
