--- a/src/turnos-app/url-services-behavior.html
+++ b/src/turnos-app/url-services-behavior.html
@@ -7,8 +7,8 @@
             properties: {
                 url_base: {
                     type: String,
-                    value: 'http://localhost:9000/'
-                    // ,value: 'https://evening-everglades-35253.herokuapp.com/'
+                    // value: 'http://localhost:9000/'
+                    value: 'http://still-ocean-19770.herokuapp.com/'
                 }
             },
             showError: function (errorMessage) {
