--- a/src/turnos-app/login-page.html
+++ b/src/turnos-app/login-page.html
@@ -84,7 +84,8 @@
                         this.$.username.focus();
                     }
                 } else {
-                    //this.$.session.destroy();
+                    //
+                    this.$.session.destroy();
                     //window.location.href = 'aaa';
                 }
             },
